--- a/index.html
+++ b/index.html
@@ -12,40 +12,81 @@
             <div class="workers--title">
                 <img src="./images/chocolate is loved.svg" alt="">
             </div>
-            <div class="workers--swiper">
-                <div class="workers--slider__wrapper">
-                    <div class="workers--card__list workers--swiper__wrapper">
-                        <div class="workers--card__item workers--swiper__slide">
-                            <img src="./images/Ellipse.png" alt="User Image" class="workers--user__image">
-                            <h2 class="workers--user_name">Victoria Dobrzhanska</h2>
-                            <p class="workers--user__profession">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
+            <div class="swiper">
+                <div class="slider-wrapper">
+                    <div class="card-list swiper-wrapper">
+                        <div class="card-item swiper-slide">
+                            <img src="./images/Ellipse.png" alt="User Image" class="user-image">
+                            <h2 class="user-name">Victoria Dobrzhanska</h2>
+                            <p class="user-profession">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
                         </div>
-                        <div class="workers--card__item workers--swiper__slide">
-                            <img src="./images/Ellipse1.png" alt="User Image" class="workers--user__image">
-                            <h2 class="workers--user_name">Nazar Babenko</h2>
-                            <p class="workers--user__profession">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
+                        <div class="card-item swiper-slide">
+                            <img src="./images/Ellipse1.png" alt="User Image" class="user-image">
+                            <h2 class="user-name">Nazar Babenko</h2>
+                            <p class="user-profession">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
                         </div>
-                        <div class="workers--card__item workers--swiper__slide">
-                            <img src="./images/Ellipse2.png" alt="User Image" class="workers--user__image">
-                            <h2 class="workers--user_name">Olena Kampusch</h2>
-                            <p class="workers--user__profession">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
+                        <div class="card-item swiper-slide">
+                            <img src="./images/Ellipse2.png" alt="User Image" class="user-image">
+                            <h2 class="user-name">Olena Kampusch</h2>
+                            <p class="user-profession">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
                         </div>
-                        <div class="workers--card__item workers--swiper__slide">
-                            <img src="./images/Ellipse1.png" alt="User Image" class="workers--user__image">
-                            <h2 class="workers--user_name">Nazar Babenko</h2>
-                            <p class="workers--user__profession">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
+                        <div class="card-item swiper-slide">
+                            <img src="./images/Ellipse1.png" alt="User Image" class="user-image">
+                            <h2 class="user-name">Nazar Babenko</h2>
+                            <p class="user-profession">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
                         </div>
-                        <div class="workers--card__item workers--swiper__slide">
-                            <img src="./images/Ellipse2.png" alt="User Image" class="workers--user__image">
-                            <h2 class="workers--user_name">Olena Kampusch</h2>
-                            <p class="workers--user__profession">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
+                        <div class="card-item swiper-slide">
+                            <img src="./images/Ellipse2.png" alt="User Image" class="user-image">
+                            <h2 class="user-name">Olena Kampusch</h2>
+                            <p class="user-profession">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
                         </div>
                     </div>
-                    <div class="workers--swiper__pagination"></div>
-                    <div class="workers--swiper__slide--button workers--swiper__button--prev"></div>
-                    <div class="workers--swiper__slide--button workers--swiper__button--next"></div>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-slide-button swiper-button-prev"></div>
+                    <div class="swiper-slide-button swiper-button-next"></div>
                 </div>
             </div>
+            <!-- <div>
+                <center><button onclick="show('block')" class="regButton">Регистрация</button>
+                    <video width="100%" src="i/Sun.mp4" autoplay="" loop=""></video>
+                    </center>
+                    <div onclick="show('none')" id="gray" style="display: none;"></div>
+                <div id="window" style="display: none;">
+                    <img class="close" src="i/close.png" alt="" onclick="show('none')">
+                    <div class="form">
+                        <h2>Регистрация</h2>
+                        <form action="index.html" name="f1">
+                            <input type="text" placeholder="Имя" name="name1" class="input">
+                            <input type="text" placeholder="Фамилия" name="name2" class="input">
+                            <input type="email" placeholder="Емеил" name="email1" class="input">
+                            <input type="email" placeholder="Подтвердите адрес Электронной Почты" name="email2" class="input">
+                            <input type="password" placeholder="Пароль" name="pass1" class="input">
+                            <input type="password" placeholder="Подтвердите пароль" name="pass2" class="input">
+                            <input type="tel" placeholder="Мобильный телефон" name="tel" class="input">
+                            <input type="submit" value="Регистрация" name="sab" class="input"> Нажимая «Регистрация», вы подтверждаете, что прочитали и согласны с нашими Условиями Пользования и Политикой Конфиденциальности.
+                        </form>
+                    </div>
+                </div>
+            </div> -->
+            <dialog style="padding: 0">
+                <div id="modal-box" style="padding: 1rem">
+                    <div class="form">
+                        <h2>Регистрация</h2>
+                        <form action="index.html" name="f1">
+                            <input type="text" placeholder="Имя" name="name1" class="input">
+                            <input type="text" placeholder="Фамилия" name="name2" class="input">
+                            <input type="email" placeholder="Емеил" name="email1" class="input">
+                            <input type="email" placeholder="Подтвердите адрес Электронной Почты" name="email2" class="input">
+                            <input type="password" placeholder="Пароль" name="pass1" class="input">
+                            <input type="password" placeholder="Подтвердите пароль" name="pass2" class="input">
+                            <input type="tel" placeholder="Мобильный телефон" name="tel" class="input">
+                            <input type="submit" value="Регистрация" name="sab" class="input"> Нажимая «Регистрация», вы подтверждаете, что прочитали и согласны с нашими Условиями Пользования и Политикой Конфиденциальности.
+                        </form>
+                    </div>
+                    <button id="close-modal-btn">Close</button>
+                </div>
+            </dialog>
+              <button id="show-modal-btn">Show modal</button>              
         </section>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./script.js"></script>
